--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "homepage": "https://daniel-jebarson.github.io",
+   
   "name": "portfolio",
   "version": "0.1.0",
+  "homepage":"https://Sulton03.github.io/Sulton_portfolio",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.0",
